# VoiceBox

./: .gitignore  AGENTS.md  README.md  SPEC.md  SPECS.md
.agent/rules/: 10-sdd.md
.agent/workflows/: implement-from-spec.md  resume-audit.md  specify.md
.clinerules/: 00-entry.md  10-sdd.md
backend/: requirements.txt
backend/src/: engine.py  (+1 more)
docs/: PRD.md  SDD_TEMPLATE.md  constitution.md  roadmap.md
frontend/: Cargo.toml
frontend/data/: characters.json  projects.json  settings.json
frontend/data/projects/: projects.json
frontend/data/projects/011ce51b-fc9f-485c-a6cf-f68d9ad46d8d/: characters.json
frontend/data/projects/149fbeb1-49e9-4041-bacc-83a26aaa8803/: characters.json
frontend/data/projects/470d2cb6-c32d-4763-be53-0e21ab986dc4/: characters.json
frontend/data/projects/6a8c131c-7b60-4968-b925-6c9ccd2dfa6f/: characters.json
frontend/data/projects/6e7ead29-ad80-4c1d-91de-04bc088054e4/: characters.json
frontend/data/projects/752774d5-cb89-4eda-8e95-3dce3ac11834/: characters.json
frontend/data/projects/8578de6a-627b-4a0c-8e3a-ff228ba65e41/: characters.json
frontend/src/: main.rs
frontend/src/components/: audio_player.rs  audio_post_processing.rs  editor.rs  mod.rs  progress_bar.rs  project_selector.rs  script_editor.rs  script_history.rs  settings_panel.rs  sidebar.rs  voice_file_list.rs  youtube_import.rs
frontend/src/models/: audio_processing.rs  character.rs  history.rs  mod.rs  project.rs  script.rs  settings.rs
frontend/src/services/: api.rs  audio_api.rs  history.rs  mod.rs  persistence.rs  script_parser.rs
frontend/src/utils/: audio.rs
(+53 files in other folders)
