[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.0", features = ["desktop"] }
dioxus-desktop = "0.6.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
rfd = { version = "0.14", default-features = false, features = ["tokio", "xdg-portal"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.49.0", features = ["full"] }
